fix: fonts ant spacing

--- a/style.css
+++ b/style.css
@@ -120,16 +120,15 @@
 
 .our_services {
     max-width: 1020px;
-    height: 500px;
     font-size: 40px;
     color: rgb( 45, 48, 58);
     padding-left: 30px;
     padding-right: 40px;
     padding-top: 45px;
-    height: 500px;
+    height: 450px;
     background-color: rgb(242, 242, 242);
     color: rgb(102, 109, 137);
-    
+    border-bottom: 6px solid white;
     
 }
 
@@ -137,7 +136,7 @@
 .services_section {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 27px;
+    margin-top: 44px;
 }
 
 .section {
@@ -147,7 +146,9 @@
     max-width: 300px;
     max-height: 85px;
     padding-left: 20px;
-    margin-bottom: 18px;
+    margin-bottom: 38px;
+    font-family: "lato";
+    line-height: 0.4em;
 
 }
 
@@ -157,10 +158,11 @@
 
 .services {
     font-size: 30px;
-    margin-top: 17px;
+    margin-top: 14px;
     margin-left: 10px; 
     font-family: "lato";
     margin-bottom: 21px;
+    letter-spacing: 0.01em;
 }
 
 .info {
